syntax = "proto3";

import "Item/HiredMerchant.proto";

package ItemProto;

message OwlSearchRecordDto {
  int32 itemId = 1;
  int32 count = 2;
}

message OwlSearchRecordResponse {
	repeated OwlSearchRecordDto items = 1;
}

message OwlSearchRequest {
	int32 masterId = 1;
	int32 usedItemId = 2;
	int32 searchItemId = 3;
}

message OwlSearchResponse{
	int32 itemdId = 1;
	repeated OwlSearchResultItemDto items = 2;
}

message OwlSearchResultItemDto {
	ItemProto.PlayerShopItemDto item = 1;
	string title = 2;
	string ownerName = 3;
	int32 mapId = 4;
	int32 channel = 5;
	int32 mapObjectId = 6;
}